--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smelcom</title>
+    <style>
+        @font-face {
+      font-family: PoppinsRegular;
+      src: local('PoppinsRegular'),
+     url('./src/fonts/poppins/Poppins-Regular.ttf') format('truetype');
+      font-size: normal;
+      font-weight: normal;
+    }
+    
+    @font-face {
+      font-family: BigNoodleTitling;
+      src: local('BigNoodleTitling'),
+     url('./src/fonts/bignoodletitling/big_noodle_titling.ttf') format('truetype');
+      font-size: normal;
+      font-weight: normal;
+    }
+    </style>
   </head>
   <body>
     <div id="root">
