начал делать меню стран

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
       font-size: normal;
       font-weight: normal;
     }
+
+    @font-face {
+      font-family: PoppinsSemiBold;
+      src: local('PoppinsSemiBold'),
+     url('./src/fonts/poppins/Poppins-SemiBold.ttf') format('truetype');
+      font-size: normal;
+      font-weight: normal;
+    }
     </style>
   </head>
   <body>
